# libpostal-rs

./: Cargo.toml  README.md  build.rs
src/: address.rs  address_parser.rs  core.rs  enums.rs  language_classifier.rs  lib.rs  options.rs  traits.rs  utils.rs
src/sys/: mod.rs
